[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/Interfaz.gd" type="Script" id=1]
[ext_resource path="res://Fonts/CUTE_ANIMAL.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 2 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="scoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.454
margin_top = -15.4543
margin_right = 162.546
margin_bottom = 250.546
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.772549, 0.690196, 0.027451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0
"
align = 1
valign = 1

[node name="ButtonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -118.909
margin_top = -154.999
margin_right = 125.091
margin_bottom = -67.9988
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.727
margin_top = 3.95386
margin_right = 213.273
margin_bottom = 118.954
custom_fonts/font = SubResource( 3 )
text = "WELCOME
"
align = 1
valign = 1

[node name="mensajeTimer" type="Timer" parent="."]
wait_time = 2.22
one_shot = true
[connection signal="pressed" from="ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="timeout" from="mensajeTimer" to="." method="_on_mensajeTimer_timeout"]
